|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2020, PHP 7.4.12

- Core:
  . Fixed bug #80061 (Copying large files may have suboptimal performance).
    (cmb)
  . Fixed bug #79423 (copy command is limited to size of file it can copy).
    (cmb)
  . Fixed bug #80126 (Covariant return types failing compilation). (Nikita)

- Calendar:
  . Fixed bug #80185 (jdtounix() fails after 2037). (cmb)

- MySQLnd:
  . Fixed bug #80115 (mysqlnd.debug doesn't recognize absolute paths with
    slashes). (cmb)
  . Fixed bug #80107 (mysqli_query() fails for ~16 MB long query when
    compression is enabled). (Nikita)

- ODBC:
  . Fixed bug #78470 (odbc_specialcolumns() no longer accepts $nullable). (cmb)
  . Fixed bug #80147 (BINARY strings may not be properly zero-terminated).
    (cmb)
  . Fixed bug #80150 (Failure to fetch error message). (cmb)
  . Fixed bug #80152 (odbc_execute() moves internal pointer of $params). (cmb)
  . Fixed bug #46050 (odbc_next_result corrupts prepared resource). (cmb)

- OPcache:
  . Fixed bug #80083 (Optimizer pass 6 removes variables used for ibm_db2 data
    binding). (Nikita)
  . Fixed bug #80194 (Assertion failure during block assembly of unreachable
    free with leading nop). (Nikita)

- PCRE:
  . Updated to PCRE 10.35. (cmb)
  . Fixed bug #80118 (Erroneous whitespace match with JIT only). (cmb)

- PDO_ODBC:
  . Fixed bug #67465 (NULL Pointer dereference in odbc_handle_preparer). (cmb)

- Standard:
  . Fixed bug #80114 (parse_url does not accept URLs with port 0). (cmb, twosee)
  . Fixed bug #76943 (Inconsistent stream_wrapper_restore() errors). (cmb)
  . Fixed bug #76735 (Incorrect message in fopen on invalid mode). (cmb)

- Tidy:
  . Fixed bug #77040 (tidyNode::isHtml() is completely broken). (cmb)

01 Oct 2020, PHP 7.4.11

- Core:
  . Fixed bug #79979 (passing value to by-ref param via CUFA crashes). (cmb,
    Nikita)
  . Fixed bug #80037 (Typed property must not be accessed before initialization